Memory settings for JVM in JAVA_OPTS which should be used to start java process in docker-entrypoint.sh scripts.