@@ -14,6 +14,8 @@ RUN apk add --no-cache bash curl tini py-pip python \
     curl -sLo /newrelic.jar https://s3.amazonaws.com/unlockd-releases/newrelic-agent/3.47.0/newrelic.jar && \
     curl -sLo /newrelic.yml https://s3.amazonaws.com/unlockd-releases/newrelic-agent/3.47.0/newrelic.yml
 
+ENV JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1
+
 ENTRYPOINT ["/sbin/tini", "--", "/docker-entrypoint.sh"]
 CMD ["start"]
 EXPOSE 8080
